--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
+body, html{
+    overflow: hidden;
+}
 body {
     line-height: 1.7;
     color: gray;
     font-weight: 400;
     font-size: 1rem;
     background: #000
-    overflow: hidden;
 }
 
 ::-moz-selection {
